melce dodal komentarje

--- a/test/skeleton.html
+++ b/test/skeleton.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>test</title>
     <script src="libs/three.js"></script>
-    <script src="libs/stats.js"></script>
+    <script src="libs/stats.js"></script> <!-- Da nam kaze FPS-je zgoraj levo. -->
     <script src="libs/dat.gui.js"></script>
     <script src="js/main.js"></script>
     <style>
@@ -15,7 +15,9 @@
     </style>
 </head>
 <body>
-<div id="Stats-output"></div>
-<div id="WebGL-output"></div>
+    <div id="Stats-output"></div>
+
+    <!-- Div which will hold the Output -->
+    <div id="WebGL-output"></div>
 </body>
 </html>
