melce dodal komentarje

--- a/test/skeleton.html
+++ b/test/skeleton.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>test</title>
-    <script src="libs/three.js"></script>
+    <script src="libs/three.js"></script> <!-- Vkljucimo three.js knjizico.. -->
     <script src="libs/stats.js"></script> <!-- Da nam kaze FPS-je zgoraj levo. -->
-    <script src="libs/dat.gui.js"></script>
-    <script src="js/main.js"></script>
+    <script src="libs/dat.gui.js"></script> <!-- Za podporo GUI desno zgoraj. -->
+    <script src="js/main.js"></script> <!-- Vkljucimo naso koda. -->
     <style>
         body {
             margin: 0;
@@ -15,9 +15,9 @@
     </style>
 </head>
 <body>
+    <!-- div element za prikazovanje FPS-jev. -->
     <div id="Stats-output"></div>
-
-    <!-- Div which will hold the Output -->
+    <!-- Div which will hold the Output. -->
     <div id="WebGL-output"></div>
 </body>
 </html>
