--- a/igra/skeleton.html
+++ b/igra/skeleton.html
@@ -7,6 +7,9 @@
     <script src="libs/stats.js"></script> <!-- Da nam kaze FPS-je zgoraj levo. -->
     <script src="libs/dat.gui.js"></script> <!-- Za podporo GUI desno zgoraj. -->
     <script src="js/main.js"></script> <!-- Vkljucimo naso koda. -->
+    <script type="text/javascript" src="libs/OBJLoader.js"></script> <!-- Za nalaganje 3D modelov. -->
+    <script type="text/javascript" src="libs/MTLLoader.js"></script> <!-- Za nalaganje 3D modelov. -->
+    <script type="text/javascript" src="libs/OBJMTLLoader.js"></script> <!-- Za nalaganje 3D modelov. -->
     <style>
         body {
             margin: 0;
