ladjico lahko vozimo

--- a/igra/skeleton.html
+++ b/igra/skeleton.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="libs/OBJLoader.js"></script> <!-- Za nalaganje 3D modelov. -->
     <script type="text/javascript" src="libs/MTLLoader.js"></script> <!-- Za nalaganje 3D modelov. -->
     <script type="text/javascript" src="libs/OBJMTLLoader.js"></script> <!-- Za nalaganje 3D modelov. -->
+    <script src="libs/KeyboardState.js"></script> <!-- Za keyboard input -->
     <style>
         body {
             margin: 0;
