premik ladje v svojo datoteko

--- a/igra/skeleton.html
+++ b/igra/skeleton.html
@@ -2,15 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>test</title>
-    <script src="libs/three.js"></script> <!-- Vkljucimo three.js knjizico.. -->
+    <title>Broadside Pirates</title>
+
+    <!-- knjizice -->
+    <script src="libs/three.js"></script> <!-- Vkljucimo three.js knjizico. -->
     <script src="libs/stats.js"></script> <!-- Da nam kaze FPS-je zgoraj levo. -->
     <script src="libs/dat.gui.js"></script> <!-- Za podporo GUI desno zgoraj. -->
     <script type="text/javascript" src="libs/OBJLoader.js"></script> <!-- Za nalaganje 3D modelov. -->
     <script type="text/javascript" src="libs/MTLLoader.js"></script> <!-- Za nalaganje 3D modelov. -->
     <script type="text/javascript" src="libs/OBJMTLLoader.js"></script> <!-- Za nalaganje 3D modelov. -->
     <script src="libs/KeyboardState.js"></script> <!-- Za keyboard input -->
-    <script src="js/main.js"></script> <!-- Vkljucimo naso koda. -->
+
+    <!-- nasa koda -->
+    <script src="js/Ladja.js"></script>
+    <script src="js/main.js"></script>
+
     <style>
         body {
             margin: 0;
