dodal morje renderirano na shaderjih

--- a/igra/skeleton.html
+++ b/igra/skeleton.html
@@ -13,8 +13,13 @@
     <script type="text/javascript" src="libs/OBJMTLLoader.js"></script> <!-- Za nalaganje 3D modelov. -->
     <script src="libs/KeyboardState.js"></script> <!-- Za keyboard input -->
 
+    <!-- Knjizice iz strani https://github.com/jbouny/ocean -->
+    <!-- Water shader -->
+    <script src="libs/water-material.js"></script>
+
     <!-- nasa koda -->
     <script src="js/Ladja.js"></script>
+    <script src="js/Water.js"></script>
     <script src="js/main.js"></script>
 
     <style>
