--- a/igra/skeleton.html
+++ b/igra/skeleton.html
@@ -20,6 +20,7 @@
     <!-- nasa koda -->
     <script src="js/Ladja.js"></script>
     <script src="js/Water.js"></script>
+    <script src="js/CanonBall.js"></script>
     <script src="js/main.js"></script>
 
     <style>
