prestavljanje kode in nadgradnja streljanja

--- a/igra/skeleton.html
+++ b/igra/skeleton.html
@@ -18,9 +18,9 @@
     <script src="libs/water-material.js"></script>
 
     <!-- nasa koda -->
+    <script src="js/Krogla.js"></script>
     <script src="js/Ladja.js"></script>
     <script src="js/Water.js"></script>
-    <script src="js/CanonBall.js"></script>
     <script src="js/main.js"></script>
 
     <style>
