--- a/igra/skeleton.html
+++ b/igra/skeleton.html
@@ -18,6 +18,7 @@
     <script src="libs/water-material.js"></script>
 
     <!-- nasa koda -->
+    <script src="js/Coin.js"></script>
     <script src="js/Krogla.js"></script>
     <script src="js/Ladja.js"></script>
     <script src="js/Water.js"></script>
@@ -56,7 +57,7 @@
     </div>
     <div id="Coins">
         <img src="textures/coin_small.png" alt="coin">
-        x <span id="collected">0</span>
+        x <span id="CollectedCoins">0</span>
     </div>
 </body>
 </html>
