fix krogla + zacetek premikanja nasprotnikov

--- a/igra/skeleton.html
+++ b/igra/skeleton.html
@@ -21,6 +21,7 @@
     <script src="js/Coin.js"></script>
     <script src="js/Krogla.js"></script>
     <script src="js/Ladja.js"></script>
+    <script src="js/LadjaNPC.js"></script>
     <script src="js/Water.js"></script>
     <script src="js/main.js"></script>
 
